# biveouaxArcade

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile.sh
.github/workflows/: push_to_epitech  push_to_epitech.yml
core/: CMakeLists.txt
core/include/: core.hpp  dynamicLib.hpp
core/src/: core.cpp  main.cpp
doc/: README.md
games/Centipede/: CMakeLists.txt
games/Centipede/include/: Centipede.hpp
games/Centipede/src/: Centipede.cpp
games/SolarFox/: CMakeLists.txt
games/SolarFox/include/: SolarFox.hpp  map.hpp
games/SolarFox/src/: SolarFox.cpp  test.cpp
games/menu/: CMakeLists.txt
games/menu/include/: menu.hpp
games/menu/src/: menu.cpp
graphics/SDL2/: CMakeLists.txt
graphics/SDL2/include/: SDL2.hpp
graphics/SDL2/src/: SDL2.cpp
graphics/SFML/: CMakeLists.txt
graphics/SFML/include/: Sfml.hpp
graphics/SFML/src/: Sfml.cpp
graphics/nCurses/: CMakeLists.txt
graphics/nCurses/include/: nCurses.hpp
graphics/nCurses/src/: nCurses.cpp
include/data/: entity.hpp  events.hpp  updates.hpp
include/interfaces/: ICore.hpp  IGraphic.hpp
